--- a/.github/workflows/superlinter.yaml
+++ b/.github/workflows/superlinter.yaml
@@ -1,17 +1,16 @@
 name: Super-linter
 
-on: 
-  push:
-    branches-ignore: [master]
+on: workflow_call
 
 jobs:
-  super-lint:
-    name: Lint code base
+  lint:
     runs-on: ubuntu-latest
-
+    
     steps: 
-      - name: Checkout Code
-        uses: actions/checkout@v3
+      - name: Get Cached Checkout
+        uses: actions/download-artifact@v3
+        with:
+          name: my-checkout-${{ github.run_id }}
 
       - name: Run Super-Linter
         uses: github/super-linter@v4
