--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -17,3 +17,7 @@ jobs:
   run_superlinter:
     needs: cache_checkout
     uses: ./.github/workflows/superlinter.yaml
+    
+  run_tests:
+    needs: cache_checkout
+    uses: ./.github/workflows/tests.yaml
