--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -23,6 +23,6 @@ jobs:
     uses: ./.github/workflows/tests.yaml
 
   run_deploy:
-    needs: [cache_checkout, run_superlinter, run_tests]
+    needs: [cache_checkout]
     uses: ./.github/workflows/deploy.yaml
 
