--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -21,3 +21,7 @@ jobs:
   run_tests:
     needs: cache_checkout
     uses: ./.github/workflows/tests.yaml
+
+  run_deploy:
+    needs: cache_checkout
+    uses: ./.github/workflows/deploy.yaml
