--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,19 +1,41 @@
-name: Deploy to Vercel
+# pZrA8A5eNQST8DngQS9fLmkF
 
+name: Vercel Production Deployment
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on: workflow_call
-
 jobs:
-  deploy:
+  Deploy-Production:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ pZrA8A5eNQST8DngQS9fLmkFN }}
+      - name: Build Project Artifacts
+        run: vercel build --prod --token=${{ pZrA8A5eNQST8DngQS9fLmkF }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --prod --token=${{ pZrA8A5eNQST8DngQS9fLmkF}}
 
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v19
-        with:
-          vercel-token: ${{ pZrA8A5eNQST8DngQS9fLmkF }}
-          vercel-org-id: ${{ k1WtHYTmET5tFjadQdOT4ZHT }}  # org ID
-          vercel-project-id: ${{ prj_5ZYS5q8cijSFO0IjoMNIHJF3NwhN }}  #project ID
-          vercel-args: '--prod'  # Use this for production
+
+# name: Deploy to Vercel
+
+# on: workflow_call
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Deploy to Vercel
+#         uses: amondnet/vercel-action@v19
+#         with:
+#           vercel-token: ${{ pZrA8A5eNQST8DngQS9fLmkF }}
+#           vercel-org-id: ${{ k1WtHYTmET5tFjadQdOT4ZHT }}  # org ID
+#           vercel-project-id: ${{ prj_5ZYS5q8cijSFO0IjoMNIHJF3NwhN }}  #project ID
+#           vercel-args: '--prod'  # Use this for production
