--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,3 @@
-# pZrA8A5eNQST8DngQS9fLmkF
-
 name: Vercel Production Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -12,12 +10,12 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ pZrA8A5eNQST8DngQS9fLmkFN }}
-      - name: Build Project Artifacts
-        run: vercel build --prod --token=${{ pZrA8A5eNQST8DngQS9fLmkF }}
-      - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ pZrA8A5eNQST8DngQS9fLmkF}}
+      # - name: Pull Vercel Environment Information
+      #   run: vercel pull --yes --environment=production --token=${{ pZrA8A5eNQST8DngQS9fLmkFN }}
+      # - name: Build Project Artifacts
+      #   run: vercel build --prod --token=${{ pZrA8A5eNQST8DngQS9fLmkF }}
+      # - name: Deploy Project Artifacts to Vercel
+      #   run: vercel deploy --prebuilt --prod --token=${{ pZrA8A5eNQST8DngQS9fLmkF}}
 
 
 # name: Deploy to Vercel
