--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,6 @@
-# pZrA8A5eNQST8DngQS9fLmkF
-
+# auth token: pZrA8A5eNQST8DngQS9fLmkF
+# projectId:  prj_5ZYS5q8cijSFO0IjoMNIHJF3NwhN
+# org id :    team_LzpixKk4Sgqq5nG2or3EzKAC
 name: Vercel Production Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
@@ -12,8 +13,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
-      # - name: Pull Vercel Environment Information
-      #   run: vercel pull --yes --environment=production --token=${{ pZrA8A5eNQST8DngQS9fLmkFN }}
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ "pZrA8A5eNQST8DngQS9fLmkFN" }}
       # - name: Build Project Artifacts
       #   run: vercel build --prod --token=${{ pZrA8A5eNQST8DngQS9fLmkF }}
       # - name: Deploy Project Artifacts to Vercel
