--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
             node-version: 16
             cache: 'npm'
-      - run: npm ci
+      - run: npm install
           
   run_superlinter:
     needs: cache_checkout
