--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,5 +8,6 @@ jobs:
       
       steps:
       - uses: actions/checkout@v3
+      - run: npm ci
       - run: npm run build --if-present
       - run: npm test
