--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -17,7 +17,9 @@ jobs:
         with:
             node-version: 16
             cache: 'npm'
-      - run: npm install
+      - run: npm ci
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli
           
   run_superlinter:
     needs: cache_checkout
