--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "puppeteer": "^21.4.1",
     "typescript": "~5.1.3"
   }
 }
