--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -34,4 +34,4 @@ jobs:
         run: npm run build
 
       - name: Test
-        run: npm test
+        run: ng test --watch=false --browsers=ChromeHeadless
