--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token="pZrA8A5eNQST8DngQS9fLmkF"
+        run: vercel pull --yes --environment=production --token="pZrA8A5eNQST8DngQS9fLmkF" ---name my-project-name
       - name: Build Project Artifacts
         run: vercel build --prod --token="pZrA8A5eNQST8DngQS9fLmkF"
       - name: Deploy Project Artifacts to Vercel
