--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,19 +1,19 @@
-name: Vercel Production Deployment
-env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+name: Deployment
 on:
   push:
-        branches: [ 0tomhoyt-patch-1 ]
+      branches: [ 0tomhoyt-patch-1 ]
+
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: update uuid
+        run: npm install uuid@latest --save
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token="pZrA8A5eNQST8DngQS9fLmkF" --name my-project-name
+        run: vercel pull --yes --environment=production --token="pZrA8A5eNQST8DngQS9fLmkF"
       - name: Build Project Artifacts
         run: vercel build --prod --token="pZrA8A5eNQST8DngQS9fLmkF"
       - name: Deploy Project Artifacts to Vercel
