--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,10 @@
 name: Deployment
+# VERCEL_TOKEN : pZrA8A5eNQST8DngQS9fLmkF
+# VERCEL_PROJECT_ID:  prj_5ZYS5q8cijSFO0IjoMNIHJF3NwhN
+# VERCEL_ORG_ID :    team_LzpixKk4Sgqq5nG2or3EzKAC
+env:
+  VERCEL_ORG_ID: "team_LzpixKk4Sgqq5nG2or3EzKAC"
+  VERCEL_PROJECT_ID: "prj_5ZYS5q8cijSFO0IjoMNIHJF3NwhN"
 on:
   push:
       branches: [ 0tomhoyt-patch-1 ]
@@ -8,10 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: update uuid
-        run: npm install uuid@latest --save
       - name: Install Vercel CLI
-        run: npm install --global vercel@latest
+        run: npm install -g vercel
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token="pZrA8A5eNQST8DngQS9fLmkF"
       - name: Build Project Artifacts
