--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "debug": "^4.3.1",
+    "fsevents": "^2.3.3",
     "rxjs": "~7.8.0",
     "supabase": "^1.106.1",
     "tslib": "^2.3.0",
-    "uuid": "^9.0.1",
+    "uuid": "^7.0.3",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
