--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "debug": "^4.3.1",
-    "fsevents": "^2.3.3",
     "rxjs": "~7.8.0",
     "supabase": "^1.106.1",
     "tslib": "^2.3.0",
@@ -38,5 +37,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.1.3"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.3"
   }
+
 }
