--- a/.github/workflows/preview_deploy.yaml
+++ b/.github/workflows/preview_deploy.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token="pZrA8A5eNQST8DngQS9fLmkF"
+        run: vercel pull --yes --environment=preview --token="pZrA8A5eNQST8DngQS9fLmkF"
       - name: Build Project Artifacts
         run: vercel build --prod --token="pZrA8A5eNQST8DngQS9fLmkF"
       - name: Deploy Project Artifacts to Vercel
