--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,9 +15,9 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token="pZrA8A5eNQST8DngQS9fLmkF"
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_ORG_ID }}
       - name: Build Project Artifacts
-        run: vercel build --prod --token="pZrA8A5eNQST8DngQS9fLmkF"
+        run: vercel build --prod --token=${{ secrets.VERCEL_ORG_ID }}
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token="pZrA8A5eNQST8DngQS9fLmkF"
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_ORG_ID }}
 
