--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,12 @@
     "no-var": "warn",
     "semi": ["error", "always"]
   }, 
+  
+  "overrides" [
+    {
+      "files": "*.json",
+      "parser": "jsonc-eslint-parser",
+      "rules": {}
+    }
 }
     
