--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,8 +17,7 @@
     "semi": ["error", "always"]
   }, 
   
-  "overrides" [
-    {
+  "overrides":{
       "files": "*.json",
       "parser": "jsonc-eslint-parser",
       "rules": {}
