--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,7 @@ name: Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID}}
   VERCEL_PROJECT_ID: ${{secrets.VERCEL_PROJECT_ID}}
+  VERCEL_TOKEN: ${{secrets.VERCEL_TOKEN}}
 on: workflow_call
 
 jobs:
