--- a/.github/workflows/preview_deploy.yaml
+++ b/.github/workflows/preview_deploy.yaml
@@ -3,8 +3,8 @@ name: Deployment
 # VERCEL_PROJECT_ID:  prj_5ZYS5q8cijSFO0IjoMNIHJF3NwhN
 # VERCEL_ORG_ID :    team_LzpixKk4Sgqq5nG2or3EzKAC
 env:
-  VERCEL_ORG_ID: "team_LzpixKk4Sgqq5nG2or3EzKAC"
-  VERCEL_PROJECT_ID: "prj_5ZYS5q8cijSFO0IjoMNIHJF3NwhN"
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID}}
+  VERCEL_PROJECT_ID: ${{secrets.VERCEL_PROJECT_ID}}
 on: 
   push:
       branches: [ preview ]
@@ -17,8 +17,8 @@ jobs:
       - name: Install Vercel CLI
         run: npm install -g vercel
       - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=preview --token="pZrA8A5eNQST8DngQS9fLmkF"
+        run: vercel pull --yes --environment=preview --token=${{secrets.VERCEL_TOKEN}}
       - name: Build Project Artifacts
-        run: vercel build --prod --token="pZrA8A5eNQST8DngQS9fLmkF"
+        run: vercel build --prod --token=${{secrets.VERCEL_TOKEN}}
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token="pZrA8A5eNQST8DngQS9fLmkF"
+        run: vercel deploy --prebuilt --prod --token=${{secrets.VERCEL_TOKEN}}
