--- a/.github/workflows/previewCI.yaml
+++ b/.github/workflows/previewCI.yaml
@@ -27,6 +27,6 @@ jobs:
     uses: ./.github/workflows/tests.yaml
 
   run_deploy:
-    needs: [cache_checkout, run_tests]
+    needs: [cache_checkout]
     uses: ./.github/workflows/preview_deploy.yaml
     secrets: inherit
