--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@supabase/supabase-js": "^2.38.4",
     "debug": "^4.3.1",
     "rxjs": "~7.8.0",
     "supabase": "^1.106.1",
@@ -42,5 +43,4 @@
   "optionalDependencies": {
     "fsevents": "^2.3.3"
   }
-
 }
