--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "@supabase/supabase-js": "^2.38.4",
+    "chart.js": "^3.1.1",
     "debug": "^4.3.1",
+    "mdb-angular-ui-kit": "^5.1.0",
     "rxjs": "~7.8.0",
     "supabase": "^1.106.1",
     "tslib": "^2.3.0",
