--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "@supabase/supabase-js": "^2.38.4",
     "debug": "^4.3.1",
+    "mdb-angular-ui-kit": "^5.1.0",
     "rxjs": "~7.8.0",
     "supabase": "^1.106.1",
     "tslib": "^2.3.0",
