--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@popperjs/core": "^2.11.6",
     "@supabase/supabase-js": "^2.38.4",
     "bootstrap": "^5.3.2",
     "debug": "^4.3.4",
     "jquery": "^3.7.1",
+    "mdb-angular-ui-kit": "^5.1.0",
     "rxjs": "~7.8.0",
     "supabase": "^1.106.1",
     "tslib": "^2.3.0",
@@ -34,6 +37,7 @@
     "@angular-devkit/build-angular": "^16.2.7",
     "@angular/cli": "^16.2.7",
     "@angular/compiler-cli": "^16.2.0",
+    "@angular/localize": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.29",
     "jasmine-core": "~4.6.0",
