--- a/.github/workflows/preview_deploy.yaml
+++ b/.github/workflows/preview_deploy.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install Vercel CLI
-        run: npm install -g vercel
+        run: npm install -g --force vercel
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{secrets.VERCEL_TOKEN}}
       - name: Build Project Artifacts
