--- a/.github/workflows/preview_deploy.yaml
+++ b/.github/workflows/preview_deploy.yaml
@@ -10,10 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install Vercel CLI
-        run: npm install -g --force vercel
+        run: npm install -g vercel
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=preview --token=${{secrets.VERCEL_TOKEN}}
       - name: Build Project Artifacts
-        run: vercel build --force --token=${{secrets.VERCEL_TOKEN}}
+        run: vercel build --token=${{secrets.VERCEL_TOKEN}}
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --token=${{secrets.VERCEL_TOKEN}}
