--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -28,7 +28,7 @@ jobs:
         run: npm list
 
       - name: Install dependencies
-        run: npm ci --force
+        run: npm ci
 
       - name: Build
         run: npm run build
