--- a/.github/workflows/preview_deploy.yaml
+++ b/.github/workflows/preview_deploy.yaml
@@ -5,7 +5,7 @@ env:
 on: 
   workflow_call
 jobs:
-  Deploy-Production:
+  Deploy-Preview:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
